--- a/resume.html
+++ b/resume.html
@@ -9,8 +9,11 @@
 <body>
 
     <header id="body-header">
-        <nav>
 
+                                                <!-- navigation section -->
+
+        <nav>
+            
             <ul class="horizontal-list text-center nav-menu">
                 <li>
                     <a href="#"> Home </a>
@@ -36,6 +39,8 @@
             </ul>
             
         </nav>
+
+                                        <!-- name social conatiner -->
 
         <div id="name-social-container">
             <div class="text-center">
@@ -79,6 +84,8 @@
     </header>
     <main>
 
+                                            <!-- about section -->
+
         <section id="about">
             <div id="my-image">
                 <img src="\me.jpg">
@@ -94,6 +101,8 @@
             </p>
             </div>
         </section>
+
+                                            <!-- skills section -->
 
         <section id="skills">
             <h1 class="section-heading mb75px ">
@@ -164,6 +173,8 @@
         </div>
         </section>
 
+                                            <!-- experience section -->
+
         <section id="experience">
 
         </section>
@@ -228,9 +239,80 @@
 
         </section>
 
+                                                    <!-- portfolio section -->
+
         <section id="portfolio">
 
+            <h1 class="section-heading mb75px">
+                <span>
+                    <i class="fas fa-th-list"></i>
+                </span>
+                <span> Portfolio </span>
+            </h1>
+
+            <div id="portfolio-container">
+
+                <div class="portfolio-image-container">
+                    <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000025_1550237330_codezen_2.png">
+                    <div class="portfolio-details">
+                        <p>
+                            This is a portfolio site that tells about my education, skills, experience. All of my achievements are listed here, there is also my contact
+                            details mentioned feel free to contact regarding any queries. If you want to any projects done that matches my skills send me the details. 
+                        </p>
+                    </div>
+
+                </div>
+                <div class="portfolio-image-container">
+                    <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000026_1550237353_project_2.jpeg">
+                    <div class="portfolio-details">
+                        <p>
+                            Write here basic details about the project.
+                        </p>
+                    </div>
+
+                </div>
+                <div class="portfolio-image-container">
+                    <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000029_1550237386_project.jpeg">
+                    <div class="portfolio-details">
+                        <p>
+                            Write here basic details about the project.
+                        </p>
+                    </div>
+
+                </div>
+                <div class="portfolio-image-container">
+                    <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000027_1550237355_project_3.png">
+                    <div class="portfolio-details">
+                        <p>
+                            Write here basic details about the project.
+                        </p>
+                    </div>
+
+                </div>
+                <div class="portfolio-image-container">
+                    <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000024_1550237299_codezen.png">
+                    <div class="portfolio-details">
+                        <p>
+                            Write here basic details about the project.
+                        </p>
+                    </div>
+
+                </div>
+                <div class="portfolio-image-container">
+                    <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000028_1550237365_tree.jpeg">
+                    <div class="portfolio-details">
+                        <p>
+                            Write here basic details about the project.
+                        </p>
+                    </div>
+
+                </div>
+
+            </div>
+
         </section>
+
+                                                     <!-- contact section -->
 
         <section id="contact">
             <h1 class="section-heading mb50px">
